Code Optimization and Sonarlint issues.